Fix references and organize dependencies in xacml-pdp after splitting policy-endpoints and message-bus
Issue-ID: POLICY-5131
Change-Id: I6181f763f140589f681beb602c56b4290e3fab1a
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>